<resources>
    <string name="app_name">ProjectNEWM</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="tribe">Tribe</string>
    <string name="stars">Stars</string>
    <string name="wallet">Wallet</string>
    <string name="compose">Compose</string>
    <string name="title_activity_main">MainActivity</string>
</resources>