<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/community" />

    <item
        android:id="@+id/navigation_stars"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/stars" />
    <item
        android:id="@+id/navigation_wallet"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/wallet" />
    <item
        android:id="@+id/navigation_compose"
        android:icon="@drawable/ic_compose"
        android:title="@string/compose" />
</menu>
