<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.projectnewm.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_community"
        android:name="com.projectnewm.ui.community.CommunityFragment"
        android:label="@string/community"
        tools:layout="@layout/fragment_community" />

    <fragment
        android:id="@+id/navigation_stars"
        android:name="com.projectnewm.ui.stars.StarsFragment"
        android:label="@string/stars"
        tools:layout="@layout/fragment_stars" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.projectnewm.ui.wallet.WalletFragment"
        android:label="@string/wallet"
        tools:layout="@layout/fragment_wallet" />

    <activity
        android:id="@+id/navigation_compose"
        android:name="com.projectnewm.MainActivity"
        android:label="MainActivity" />

</navigation>